--- a/src/components/SearchBox.css
+++ b/src/components/SearchBox.css
@@ -1,8 +1,10 @@
 .SearchBox,
 .SearchBox .icon {
     display: flex;
-    background-color: rgb(250, 244, 190);
+    background-color: rgba(245, 150, 61, 0.5);
+    /* background-color: #faf8e3; */
     justify-content: space-between;
+    align-items: center;
 }
 
 .SearchBox .icon {
@@ -11,4 +13,22 @@
 
 .SearchBox .icon span {
     cursor: pointer;
+}
+
+.SearchBox .search {
+    border: 0;
+    outline: 0;
+    width: 500px;
+    height: 26px;
+    border-radius: 0.4rem;
+    padding: 5px 10px;
+    background-color: rgba(250, 247, 245, 0.5);
+}
+
+.SearchBox .search:hover {
+    background-color: rgba(250, 247, 245, 0.904);
+}
+
+.SearchBox .search::placeholder {
+    color: rgba(97, 96, 96, 0.5);
 }
