--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@
 
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: center;
   width: 90%;
   margin: 0 auto;
   padding-top: 20px;
