--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -1,10 +1,18 @@
+:root {
+    --white: #fff;
+    --light-dark: rgba(49, 29, 3, 0.534);
+    --dark: #854012;
+    --box: #c43c3c;
+}
+
 .Banner {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin: 0 auto;
-    width: 95%;
+    width: 100%;
     height: 300px;
+
     /* border: 1px solid black; */
 }
 
@@ -17,6 +25,11 @@
     height: 100%;
     /* background-color: #b48319; */
     background-color: rgb(226, 174, 61);
+    background-image: linear-gradient(to left, var(--light-dark), var(--dark)),
+        url('../img-home/img-img/bann.jpeg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
     /* border: 1px solid red; */
 }
 
