--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,25 +1,26 @@
 .Header {
+    position: relative;
     display: flex;
     justify-content: space-between;
-
-    background-color: rgb(250, 225, 170);
+    background-color: #f8e2cd;
 }
 
 .Header .menu {
     display: flex;
     width: 60%;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
-.Header .menu a {
+.Header .menu p {
+    cursor: pointer;
     text-decoration: none;
     font-size: 14px;
     font-weight: 600;
-
+    color: rgb(26, 25, 25);
     transition: ease-in-out 0.3s;
 }
 
-.Header .menu a:hover {
+.Header .menu p:hover {
     transform: scale(1.1);
     color: brown;
 }
