--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -11,14 +11,14 @@
     align-items: center;
     margin: 0 auto;
     width: 100%;
-    height: 300px;
+    height: 380px;
 
     /* border: 1px solid black; */
 }
 
 .Banner .banner {
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
     color: #fff;
     width: 950%;
@@ -31,6 +31,19 @@
     background-size: cover;
     background-repeat: no-repeat;
     /* border: 1px solid red; */
+}
+
+.Banner .banner .banner-content {
+    margin-left: 4.5rem;
+}
+
+.Banner .banner .banner-content h1 {
+    font-size: 3.5rem;
+    margin: 0;
+}
+
+.Banner .banner .banner-content p {
+    font-size: 1.06rem;
 }
 
 .Banner .cartbox {
