--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -28,7 +28,29 @@
     margin-left: 2rem;
 }
 
-.Header .menu p:hover {
+.Header #cart-icon {
+    display: none;
+    margin-right: 2.5rem;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 1.02rem;
+    font-weight: 600;
+    color: rgb(26, 25, 25);
+    transition: ease-in-out 0.3s;
+}
+
+.Header .menu p:hover,
+.Header #cart-icon:hover {
     transform: scale(1.1);
     color: brown;
+}
+
+@media (max-width: 768px) {
+    .Header .menu {
+        display: none;
+    }
+
+    .Header #cart-icon {
+        display: block;
+    }
 }
