--- a/src/components/Cart.css
+++ b/src/components/Cart.css
@@ -1,14 +1,32 @@
 .Cart {
+    /* margin: 50% auto; */
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     justify-content: center;
     background-color: #ffffff;
-    width: 200px;
-    height: 400px;
-    z-index: 1;
+    /* width: 400px; */
+    height: 600px;
+    z-index: 100;
     position: absolute;
-    top: 34px;
-    right: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     padding: 10px;
+    border-radius: 0.4rem;
+    box-shadow: 1px 1px 33px 1px black;
     transition: 0.3s ease-in-out;
+}
+
+.Cart .selection {
+    margin: 0 auto;
+    width: 90%;
+    height: 60%;
+    border-radius: 0.4rem;
+    border: 1px solid rgb(129, 129, 129);
+}
+
+.Cart .grand-total {
+    bottom: 0;
+    color: rgb(82, 3, 3);
 }
