--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -11,6 +11,7 @@
 @media (max-width: 480px) {
 
     .Footer {
-        flex-direction: column;
+        /* flex-direction: column; */
+        align-items: left;
     }
 }
