--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -11,7 +11,7 @@
     align-items: center;
     margin: 0 auto;
     width: 100%;
-    height: 380px;
+    height: 480px;
 
     /* border: 1px solid black; */
 }
@@ -38,12 +38,12 @@
 }
 
 .Banner .banner .banner-content h1 {
-    font-size: 3.5rem;
+    font-size: 4.8rem;
     margin: 0;
 }
 
 .Banner .banner .banner-content p {
-    font-size: 1.06rem;
+    font-size: 1.6rem;
 }
 
 .Banner .cartbox {
@@ -51,6 +51,10 @@
     height: 100%;
 
     border: 1px solid red;
+}
+
+.Banner .banner-btn {
+    width: 77rem;
 }
 
 @media (max-width: 768px) {
