--- a/src/components/Category.css
+++ b/src/components/Category.css
@@ -1,4 +1,4 @@
-.Cartegory {
+.Category {
     /* border: 1px solid black; */
     width: 25%;
     height: 250px;
@@ -11,7 +11,7 @@
     position: relative;
 }
 
-.Cartegory .shade {
+.Category .shade {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -23,17 +23,17 @@
     transition: all 0.3s ease;
 }
 
-.Cartegory .shade:hover {
+.Category .shade:hover {
     opacity: 1;
 }
 
-.Cartegory img {
+.Category img {
     width: 100%;
     height: 250px;
     border-radius: 0.65rem;
 }
 
-.Cartegory h2 {
+.Category h2 {
     position: absolute;
     top: 7px;
     left: 20px;
@@ -43,7 +43,7 @@
 }
 
 @media (max-width: 1024px) {
-    .Cartegory {
+    .Category {
         /* border: 1px solid black; */
         width: 40%;
         height: 250px;
@@ -53,7 +53,7 @@
 }
 
 @media (max-width: 768px) {
-    .Cartegory {
+    .Category {
         /* border: 1px solid black; */
         width: 80%;
     }
