--- a/src/components/AddedItem.css
+++ b/src/components/AddedItem.css
@@ -3,6 +3,10 @@
     justify-content: space-evenly;
     /* border: 1px solid black; */
     font-size: large;
+}
 
-
+.AddedItem #remove {
+    cursor: pointer;
+    font-weight: 900;
+    color: red;
 }
