--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -1,7 +1,7 @@
 :root {
     --white: #fff;
-    --light-dark: rgba(49, 29, 3, 0.534);
-    --dark: #854012;
+    --light-dark: rgb(247, 198, 133);
+    --dark: #f5d0b8;
     --box: #c43c3c;
 }
 
@@ -23,10 +23,7 @@
     color: #fff;
     width: 950%;
     height: 100%;
-    /* background-color: #b48319; */
-    background-color: rgb(226, 174, 61);
-    background-image: linear-gradient(to left, var(--light-dark), var(--dark)),
-        url('../img-home/img-img/bann.jpeg');
+    background: url('../img-home/img-img/WhatsApp\ Image\ 2023-06-20\ at\ 8.40.37\ PM\ \(2\).jpeg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
