--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -4,7 +4,7 @@
     height: 4rem;
     justify-content: space-between;
     align-items: center;
-    background-color: #f8e2cd;
+    background-color: #f9f4ef;
     font-size: 1.5rem;
 }
 
