--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -23,7 +23,7 @@
     color: #fff;
     width: 950%;
     height: 100%;
-    background: url('../img-home/img-img/WhatsApp\ Image\ 2023-06-20\ at\ 8.40.37\ PM\ \(2\).jpeg');
+    background: url('../img-home/banner2.jpeg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
