--- a/src/components/Category.css
+++ b/src/components/Category.css
@@ -11,6 +11,29 @@
     position: relative;
 }
 
+.Category img {
+    width: 100%;
+    height: 250px;
+    border-radius: 0.65rem;
+}
+
+.Category h2 {
+    position: absolute;
+    top: 5px;
+    left: 0;
+    color: #949292;
+    /* text-shadow: 2px 0.5px rgb(92, 92, 92); */
+    z-index: 1;
+    opacity: 0;
+    transition: ease-in-out 0.3s;
+}
+
+.Category:hover h2 {
+    color: whitesmoke;
+    opacity: 1;
+    left: 12px;
+}
+
 .Category .shade {
     position: absolute;
     width: 100%;
@@ -25,21 +48,6 @@
 
 .Category .shade:hover {
     opacity: 1;
-}
-
-.Category img {
-    width: 100%;
-    height: 250px;
-    border-radius: 0.65rem;
-}
-
-.Category h2 {
-    position: absolute;
-    top: 7px;
-    left: 20px;
-    color: whitesmoke;
-    text-shadow: 5px 2px 8px 3px rgb(10, 10, 10);
-    z-index: 1;
 }
 
 @media (max-width: 1024px) {
