--- a/src/components/Product.css
+++ b/src/components/Product.css
@@ -5,23 +5,44 @@
     width: 300px;
     margin: 20px;
     border-radius: 0.4rem;
-    box-shadow: 1px 2px 12px 1px #c0bfbf;
-
+    /* box-shadow: 1px 2px 12px 1px #c0bfbf; */
     /* border: 1px solid black; */
 }
 
 .Product .img {
     height: 50%;
     width: 100%;
-
     /* border: 1px solid red; */
 }
 
 .Product .img img {
     height: 100%;
     width: 100%;
-
+    border-radius: 0.4rem;
     /* border: 1px solid blue; */
+}
+
+.Product .product-details h3,
+h4,
+p {
+    text-align: left;
+    margin: 0.4rem;
+    /* border: 1px solid black; */
+}
+
+.Product .price {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-bottom: 10px;
+}
+
+.Product .qtyBox {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-weight: 800;
+    /* border: 1px solid black; */
 }
 
 .Product .qtyBox .qty {
@@ -32,31 +53,41 @@
     cursor: pointer;
     border: 0;
     outline: 0;
-    width: 100px;
+    /* width: 100px; */
     height: 30px;
     border-radius: 6px;
-    margin: 0 4px 0 4px;
     font-size: 17px;
     color: #FFFFFF;
 }
 
-.Product .qtyBox .qty .MinusBtn {
+.Product .price .MinusBtn {
     background-color: #fb7272;
     font-size: 25px;
-    width: 30px;
-    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 25px;
+    height: 25px;
 }
 
-.Product .qtyBox .qty .AddBtn {
+.Product .qtyBox .qty .MinusBtn:disabled {
+    background-color: #f4c8c8;
+}
+
+.Product .price .AddBtn {
     background-color: #39b9f9;
     font-size: 25px;
-    width: 30px;
-    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 25px;
+    height: 25px;
 }
 
 .Product .qtyBox .qty .AddItem {
     background-color: #f6f6f5;
     color: #410707;
+    margin-left: 10px;
     border: 1px solid #570606;
 }
 
@@ -64,31 +95,4 @@
     background-color: #f6f6f58f;
     color: #4107077a;
     border: 1px solid #57060667;
-}
-
-.Product .qtyBox .qty .MinusBtn:disabled {
-    background-color: #f4c8c8;
-}
-
-.Product .price {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.Product .qtyBox {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    font-weight: 800;
-    /* border: 1px solid black; */
-}
-
-.Product .product-details h3,
-h4,
-p {
-    text-align: left;
-    margin: 0.4rem;
-
-    /* border: 1px solid black; */
 }
