--- a/src/components/Cart.css
+++ b/src/components/Cart.css
@@ -5,10 +5,10 @@
     flex-wrap: wrap;
     justify-content: center;
     background-color: #ffffff;
-    width: 800px;
-    /* height: 600px; */
+    width: 60vw;
+    height: 80vh;
     z-index: 100;
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
